# AIEOS

./: .dockerignore  .env.example  .env.staging.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/api/: README.md
apps/web/: .env.example  README.md  package-lock.json  package.json
apps/web/src/: proxy.ts
configs/: default.yaml
docs/: ARCHITECTURE.md  AUTH.md  DEPLOY.md  MVP.md  ROADMAP.md  SECURITY.md  VISION.md
docs/superpowers/plans/: 2026-07-15-clerk-auth.md  2026-07-15-knowledge-search.md  2026-07-15-model-library.md  2026-07-15-phase-1-kernel-mvp.md  2026-07-15-phase-2-product-surface.md  2026-07-15-pipelines.md
scripts/: docker-entrypoint.sh
src/aeios/: __init__.py  cli.py  config.py  secrets.py
src/aeios/agents/: __init__.py  act_loop.py  architect.py  base.py  echo.py  software_engineer.py
src/aeios/api/: __init__.py  app.py  auth.py
src/aeios/core/: __init__.py  kernel.py  pipeline_runner.py  scheduler.py  state_machine.py  syscalls.py  types.py
tests/: conftest.py  test_act_loop.py  test_agents_tools.py  test_api.py  test_artifacts.py  test_async_progress.py  test_auth.py  test_cancel_sse.py  test_db.py  test_filesystem.py  test_http.py  test_kernel.py  test_knowledge.py  test_mcp.py  test_models.py  test_observability.py  test_owner_isolation.py  test_persistence.py  test_pipeline_cancel_sse.py  test_pipelines.py  test_planner.py  test_postgres.py  test_projects.py  test_qdrant.py  test_secrets.py  test_shell.py
(+70 files in other folders)
